--- a/Vue/vueMatch.twig
+++ b/Vue/vueMatch.twig
@@ -99,7 +99,7 @@ Convocations sportives
         <div class="form-group row pt-2">
             <label for="dateCompetition" class="col-3 col-form-label">Date de la compétition : </label>
             <div class="col-6">
-            <input type="date" name="date" id="dateCompetition" class="form-control" required>
+                <input type="date" name="date" id="dateCompetition" min="2020-08-01" max="2021-07-31" class="form-control" required>
             </div>
         </div>
 
@@ -130,5 +130,23 @@ Convocations sportives
         </div>
     </form>
 </div>
+
+
+<script>
+    var today = new Date().toISOString().split('T')[0];
+    document.querySelector('input[type=date]').setAttribute('min', today);
+
+    var date = document.querySelector('input[type=date]');
+    function weekEnd(e) {
+        var jour = new Date(e.target.value).getUTCDay();
+        if( jour == 0 || jour == 6 ){
+            e.target.setCustomValidity('');
+
+        } else {
+            e.target.setCustomValidity('Veuillez choisir une date valide (Samedi ou Dimanche)');
+        }
+    }
+    date.addEventListener('change',weekEnd);
+</script>
 
 {% endblock %}
