--- a/Vue/vueMenuCompte.twig
+++ b/Vue/vueMenuCompte.twig
@@ -13,36 +13,84 @@ Convocations sportives
 <div class="row pt-5">
     <div class="col-6">
         <h1>Joueurs du Club</h1>
-        <table class="table border table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Prenom</th>
-                    <th>Categorie</th>
-                    <th>Licencie</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for joueur in joueurs %}
-                <tr>
-                    <td>{{ joueur['Nom'] }}</td>
-                    <td>{{ joueur['Prenom'] }}</td>
-                    <td>{{ joueur['Categorie'] }}</td>
-                    <td>{{ joueur['Licencie'] }}</td>
-                    <td><form method="post" action="index.php?action=supprimerJoueur">
-                            <input type="hidden" name="idJoueur" value="{{ joueur['IdJoueur'] }}" />
-                            <button type="submit" class="btn btn-danger"><i class="fa fa-user-slash"></i></button>
-                        </form></td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td colspan="5" class="text-center">Aucun convocation en cours</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="row">
+            <table class="table border table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Prenom</th>
+                        <th>Categorie</th>
+                        <th>Licencie</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for joueur in joueurs %}
+                    <tr>
+                        <td>{{ joueur['Nom'] }}</td>
+                        <td>{{ joueur['Prenom'] }}</td>
+                        <td>{{ joueur['Categorie'] }}</td>
+                        <td>{{ joueur['Licencie'] }}</td>
+                        <td><form method="post" action="index.php?action=supprimerJoueur">
+                                <input type="hidden" name="idJoueur" value="{{ joueur['IdJoueur'] }}" />
+                                <button type="submit" class="btn btn-danger"><i class="fa fa-user-slash"></i></button>
+                            </form></td>
+                    </tr>
+                    {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center">Aucun convocation en cours</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="row pt-5 mb-5">
+            <h1>Ajouter un joueur</h1>
+            <form method="post" action="index.php?action=ajouterJoueur">
+                <div class="form-group row">
+                    <label for="nomJoueur" class="col-4 col-form-label">Nom : </label>
+                    <div class="col">
+                        <input type="text" name="nom" id="nomJoueur" class="form-control" required>
+                    </div>
+                </div>
+                <div class="form-group row mt-2">
+                    <label for="prenomJoueur" class="col-4 col-form-label">Prénom : </label>
+                    <div class="col">
+                        <input type="text" name="prenom" id="prenomJoueur" class="form-control" required>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label for="categorieJoueur" class="col-4 col-form-label">Categorie : </label>
+                    <div class="col">
+                        <select name="categorie" id="categorieJoueur" class="form-select" >
+                            {% for categorie in categories %}
+                                <option value="{{ categorie['Nom'] }}">{{ categorie['Nom'] }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row mt-2">
+                    <label class="col-4 col-form-label">Licencié au club : </label>
+                    <div class="col">
+                        <div class="form-group row">
+                            <label for="oui" class="col-form-label col-3">
+                                <input type="radio" name="licencie" id="oui" value="oui" class="form-check-input mr-1"> Oui
+                            </label>
+                            <label for="non" class="col-form-label offset-1 col-3">
+                                <input type="radio" name="licencie" id="non" value="non" class="form-check-input mr-1" checked> Non
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row justify-content-center mt-2">
+                    <button type="submit" class="btn btn-primary col-5">Ajouter</button>
+                </div>
+            </form>
+        </div>
     </div>
+
 
     <div class="offset-1 col-5">
         <div class="row">
@@ -66,6 +114,7 @@ Convocations sportives
                 </tbody>
             </table>
         </div>
+
         <div class="row pt-5">
             <h1>Ajouter une licence</h1>
             <form method="post" action="index.php?action=ajouterLicence">
@@ -83,56 +132,26 @@ Convocations sportives
                 </div>
             </form>
         </div>
-    </div>
-</div>
-
-<!------------------------------->
-
-<div class="row pt-5 mb-5">
-    <div class="col-5">
-        <h1>Ajouter un joueur</h1>
-        <form method="post" action="index.php?action=ajouterJoueur">
-            <div class="form-group row">
-                <label for="nomJoueur" class="col-4 col-form-label">Nom : </label>
-                <div class="col">
-                    <input type="text" name="nom" id="nomJoueur" class="form-control" required>
-                </div>
-            </div>
-            <div class="form-group row mt-2">
-                <label for="prenomJoueur" class="col-4 col-form-label">Prénom : </label>
-                <div class="col">
-                    <input type="text" name="prenom" id="prenomJoueur" class="form-control" required>
-                </div>
-            </div>
-
-            <div class="form-group row mt-2">
-                <label for="categorieJoueur" class="col-4 col-form-label">Categorie : </label>
-                <div class="col">
-                    <select name="categorie" id="categorieJoueur" class="form-select" >
-                        {% for categorie in categories %}
-                            <option value="{{ categorie['Nom'] }}">{{ categorie['Nom'] }}</option>
-                        {% endfor %}
-                </select>
-                </div>
-            </div>
-            <div class="form-group row mt-2">
-                <label class="col-4 col-form-label">Licencié au club : </label>
-                <div class="col">
-                    <div class="form-group row">
-                        <label for="oui" class="col-form-label col-3">
-                            <input type="radio" name="licencie" id="oui" value="oui" class="form-check-input mr-1"> Oui
-                        </label>
-                        <label for="non" class="col-form-label offset-1 col-3">
-                            <input type="radio" name="licencie" id="non" value="oui" class="form-check-input mr-1" checked> Non
-                        </label>
+        <div class="row pt-5">
+            <h1>Retirer une licence</h1>
+            <form method="post" action="index.php?action=retirerLicence">
+                <div class="form-group row">
+                    <div class="col-6">
+                        <select name="idJoueur" id="joueurLicence" class="form-select">
+                            {% for licencie in licencies %}
+                                <option value="{{ licencie['IdJoueur'] }}">{{ licencie['Nom'] }} {{ licencie['Prenom'] }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="offset-1 col-5">
+                        <button type="submit" class="btn btn-danger"><i class="fa fa-times-circle"></i>&nbsp;&nbsp;Retirer</button>
                     </div>
                 </div>
-            </div>
-            <div class="form-group row justify-content-center mt-2">
-                <button type="submit" class="btn btn-primary col-5">Ajouter</button>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
+
+
 {% endblock %}
 
